@@ -14,6 +14,11 @@ In 0.10:
   patchlevel 19:
        - small fixes for swallowing
        - bugfix for  TitlebarPixmapActive
+       - auto-iconify-on-focus-loss applies only for floating windows
+         (like kde toolbars or kde menubars)
+       - re-introduced explicit XUnmapWindow calls for the inner windows.
+         This is important for video cards etc. I hope I did not break 
+         anything.
 
   patchlevel 18:
        - transient windows become iconified if the main window loses
